# opt_camera-release

./: CMakeLists.txt  CMakeLists.txt~  README.md  bloom.conf  debian.store  package.xml  package.xml~  patches.conf
debian/: changelog  control
devel/: .catkin  .rosinstall  env.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/opt_camera/: OptNM33CameraConfig.h
devel/lib/opt_camera/: nm33_node_non_std_uvc
devel/lib/python2.7/dist-packages/opt_camera/cfg/: OptNM33CameraConfig.py
devel/share/opt_camera/cmake/: opt_cameraConfig.cmake
groovy-devel/: setup.zsh
groovy-devel/lib/opt_camera/: init_xu_register_non_std_uvc  nm33_node
groovy-devel/lib/pkgconfig/: opt_camera.pc
opt_camera-release/groovy-devel/: setup.bash  setup.sh
opt_camera-release/groovy-devel/lib/opt_camera/: init_xu_register
opt_camera-release/src/opt_camera/cfg/: OptNM33CameraConfig.cfg.original
src/opt_camera/src/: nm33_node.cpp
